main: change exit value of --version from 1 to 0

gnome-session --version prints version string and gave 1 as a
exit value. This patch changes that exit value from 1 to 0.

https://bugzilla.gnome.org/show_bug.cgi?id=690273